Fix dynamic vh on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -17,7 +17,7 @@
 
 $hero-background-color: #00c4fe; // 5, 10, 72, 64, 70
 
-.hero {
+#hero {
 
     background-color: $hero-background-color;
     color: $font-color-inverse;
